--- a/app/globals.css
+++ b/app/globals.css
@@ -9,8 +9,8 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #e9e9e9;
+    --foreground: #181818;
   }
 }
 
